Added event tiles to index and some css to freelancer.css

--- a/index.html
+++ b/index.html
@@ -91,16 +91,72 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-4 portfolio-item">
+              <div class="event-module">
+                <div class="portfolio-item">
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
                         <img src="img/portfolio/cabin.png" class="img-responsive" alt="">
                     </a>
                 </div>
+
+                <div class="event-module-details">
+                  <div class='align-text-left'> Yoga! </div> <div class='align-text-right'> Fun </div> <br />
+                  Monday 6pm - Large Room
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" aria-valuenow="70"
+                    aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                      <span class="sr-only">70% Complete</span>
+                    </div>
+                  </div>
+                </div>
+                <br />
+                <br />
+                <div class="align-text-left"> 120 Accompanying </div> <div class='align-text-right'> It's On </div> <br />
+
+              </div>
+
+              <div class="event-module">
+                <div class="portfolio-item">
+                    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+                        <img src="img/portfolio/cabin.png" class="img-responsive" alt="">
+                    </a>
+                </div>
+
+                <div class="event-module-details">
+                  <div class='align-text-left'> Yoga! </div> <div class='align-text-right'> Fun </div> <br />
+                  Monday 6pm - Large Room
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" aria-valuenow="70"
+                    aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                      <span class="sr-only">70% Complete</span>
+                    </div>
+                  </div>
+                </div>
+                <br />
+                <br />
+                <div class="align-text-left"> 120 Accompanying </div> <div class='align-text-right'> It's On </div> <br />
+
+              </div>
+
+
+              <div class="event-module">
+                <div class="portfolio-item">
+                    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+                        <img src="img/portfolio/cabin.png" class="img-responsive" alt="">
+                    </a>
+                </div>
+
+                <div class="event-module-details">
+                  Test
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" aria-valuenow="70"
+                    aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                      <span class="sr-only">70% Complete</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
