--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div class="events row-fluid">
 <!-- start of event yoga -->
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <img src="img/portfolio/yoga.png" class="img-responsive" alt=""><br>
                         <strong> Yoga! </strong> <div> Fun </div>
                           <div>Monday 6pm - Large Room</div><br>
@@ -112,7 +112,7 @@
 <!-- end of event 1 -->
 <!-- start of event Learn about Investing -->
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                         <img src="img/portfolio/finance.png" class="img-responsive" alt=""><br>
                         <strong> Learn about Investing </strong> <div> Money </div>
                           <div>April 13th, 4pm - Small Room</div><br>
@@ -142,7 +142,7 @@
 <!-- end of event Workout session -->
 <!-- start of event Damn Good Place for Podcasters Meetup-->
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
                         <img src="img/portfolio/podcast.png" class="img-responsive" alt=""><br>
                         <strong> Damn Good Place for Podcasters Meetup</strong> <div>Tech • Sponsored by Sandbox Suites</div>
                             <div>April 20th, 6:30pm</div><br>
@@ -157,7 +157,7 @@
 <!-- end of event Lunch at Damn Good Place for Podcasters Meetup -->
 <!-- start of event How to save for retirement -->
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
                         <img src="img/portfolio/money.png" class="img-responsive" alt=""><br>
                         <strong> How to save for retirement</strong> <div>Money •  Sponsored by Credit Karma </div>
                         <div>April 20th, 6:30pm  </div>  <br>                   
@@ -172,7 +172,7 @@
 <!-- end of event Product Team Cruise!! -->
 <!-- start of event Infographics workshop -->
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
                         <img src="img/portfolio/infographic.png" class="img-responsive" alt=""><br>
                         <strong> Infographics workshop</strong> <div> Design • Sponsored by Sandbox Suites</div>
                           <div>May 7th, 9am</div><br>
@@ -187,7 +187,7 @@
 <!-- end of event Infographics workshop-->
 <!-- start of event Brown Bag Lunch - AWS best practices -->
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal7" class="portfolio-link" data-toggle="modal">
                         <img src="img/portfolio/tea.png" class="img-responsive" alt=""><br>
                         <strong> Bubble tea run?</strong> <div> Food </div>
                           <div>Monday 6pm</div><br>
@@ -202,7 +202,7 @@
 <!-- end of event Brown Bag Lunch - AWS best practices -->
 <!-- start of event Play with an Oculus! -->
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal8" class="portfolio-link" data-toggle="modal">
                         <img src="img/portfolio/oculus.png" class="img-responsive" alt=""><br>
                         <strong> Play with an Oculus!</strong><div> Fun • Sponsored by Oculus </div> 
                             <div>April 15th, 2pm - Big Room</div><br>
@@ -217,7 +217,7 @@
 <!-- end of event Play with an Oculus!-->
 <!-- start of event SBS Happy hour -->
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal9" class="portfolio-link" data-toggle="modal">
                         <img src="img/portfolio/happy.png" class="img-responsive" alt=""><br />
                         <strong> Yoga! </strong> <div> Fun • Sponsored by Sandbox Suites </div> 
                           <div>April 21st, 4pm</div><br>
@@ -232,7 +232,7 @@
 <!-- end of event SBS Happy hour -->
 <!-- start of event SBS Bagel Breakfast -->
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal10" class="portfolio-link" data-toggle="modal">
                         <img src="img/portfolio/bagel.png" class="img-responsive" alt=""><br />
                         <strong> SBS Bagel Breakfast </strong> <div> Fun </div> 
                           <div>Monday 6pm - Large Room</div><br>
@@ -247,7 +247,7 @@
 <!-- end of event SBS Bagel Breakfast -->
 <!-- start of event Artificial Intelligence Meetup -->
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal11" class="portfolio-link" data-toggle="modal">
                         <img src="img/portfolio/meetup.png" class="img-responsive" alt=""><br />
                         <strong>Artificial Intelligence Meetup</strong> <div>Tech • Sponsored by Sandbox Suites</div> 
                           <div>April 21st, 6:30pm</div><br />
@@ -262,7 +262,7 @@
 <!-- end of event Artificial Intelligence Meetup -->
 <!-- start of event Networking Lunch -->
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal12" class="portfolio-link" data-toggle="modal">
                         <img src="img/portfolio/lunch.png" class="img-responsive" alt=""><br />
                         <strong>Networking Lunch</strong> <div>Food</div> 
                           <div>April 11th, 12pm</div><br />
@@ -339,12 +339,13 @@
                 </div>
             </div>
             <div class="container">
-                <div class="row">
-                    <div class="col-lg-5 col-lg-offset-2">
-                        <div class="modal-body">
-                            <h2>Yoga</h2>
+
+<!--                     <div class="col-lg-5 col-lg-offset-2"> -->                       
+                        <h2>Yoga</h2>
+            <div class="row">
+                        <div class="modal-body col-md-8">
                             <hr class="star-primary">
-                            <img src="img/portfolio/yoga.png" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/yoga@2x.png" class="img-responsive img-centered" alt="">
                             <h4>Monday, April 19, 2016</h4>
                             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
                             <ul class="list-inline item-details">
@@ -363,8 +364,8 @@
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
-                    </div>
-                    <div class="col-lg-5">
+<!--                     </div> -->
+                    <div class="col-md-4">
                          <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="70"
                             aria-valuemin="0" aria-valuemax="100" style="width:70%">
@@ -372,13 +373,14 @@
                             </div>
                           </div>
                         <button class = "btn ">Join </button>
-                        
-
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
+
+
     <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
