--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                     <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
                         <img src="img/portfolio/money.png" class="img-responsive" alt=""><br>
                         <strong> How to save for retirement</strong> <div>Money •  Sponsored by Credit Karma </div>
-                        <div>April 20th, 6:30pm  </div>  <br>                   
+                        <div>April 20th, 6:30pm  </div>  <br>
                           <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="70"
                             aria-valuemin="0" aria-valuemax="100" style="width:70%">
@@ -204,7 +204,7 @@
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal8" class="portfolio-link" data-toggle="modal">
                         <img src="img/portfolio/oculus.png" class="img-responsive" alt=""><br>
-                        <strong> Play with an Oculus!</strong><div> Fun • Sponsored by Oculus </div> 
+                        <strong> Play with an Oculus!</strong><div> Fun • Sponsored by Oculus </div>
                             <div>April 15th, 2pm - Big Room</div><br>
                           <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="70"
@@ -219,7 +219,7 @@
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal9" class="portfolio-link" data-toggle="modal">
                         <img src="img/portfolio/happy.png" class="img-responsive" alt=""><br />
-                        <strong> Yoga! </strong> <div> Fun • Sponsored by Sandbox Suites </div> 
+                        <strong> Yoga! </strong> <div> Fun • Sponsored by Sandbox Suites </div>
                           <div>April 21st, 4pm</div><br>
                           <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="70"
@@ -234,7 +234,7 @@
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal10" class="portfolio-link" data-toggle="modal">
                         <img src="img/portfolio/bagel.png" class="img-responsive" alt=""><br />
-                        <strong> SBS Bagel Breakfast </strong> <div> Fun </div> 
+                        <strong> SBS Bagel Breakfast </strong> <div> Fun </div>
                           <div>Monday 6pm - Large Room</div><br>
                           <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="70"
@@ -249,7 +249,7 @@
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal11" class="portfolio-link" data-toggle="modal">
                         <img src="img/portfolio/meetup.png" class="img-responsive" alt=""><br />
-                        <strong>Artificial Intelligence Meetup</strong> <div>Tech • Sponsored by Sandbox Suites</div> 
+                        <strong>Artificial Intelligence Meetup</strong> <div>Tech • Sponsored by Sandbox Suites</div>
                           <div>April 21st, 6:30pm</div><br />
                           <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="70"
@@ -264,7 +264,7 @@
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal12" class="portfolio-link" data-toggle="modal">
                         <img src="img/portfolio/lunch.png" class="img-responsive" alt=""><br />
-                        <strong>Networking Lunch</strong> <div>Food</div> 
+                        <strong>Networking Lunch</strong> <div>Food</div>
                           <div>April 11th, 12pm</div><br />
                           <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="70"
@@ -332,47 +332,38 @@
     <!-- Portfolio Modals -->
     <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
+<!--             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
                     <div class="rl">
                     </div>
                 </div>
-            </div>
+            </div> -->
             <div class="container">
-
-<!--                     <div class="col-lg-5 col-lg-offset-2"> -->                       
-                        <h2>Yoga</h2>
+<!--                     <div class="col-lg-5 col-lg-offset-2"> -->
+            <h2>Yoga</h2>
             <div class="row">
-                        <div class="modal-body col-md-8">
-                            <hr class="star-primary">
+                <div class="modal-body col-md-8">
+                      <hr class="star-primary">
                             <img src="img/portfolio/yoga@2x.png" class="img-responsive img-centered" alt="">
                             <h4>Monday, April 19, 2016</h4>
                             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                            <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong>Start Bootstrap</a>
-                                    </strong>
-                                </li>
-                                <li>Date:
-                                    <strong>April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong>Web Development</a>
-                                    </strong>
-                                </li>
-                            </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
 <!--                     </div> -->
-                    <div class="col-md-4">
+                    <div class="col-md-4" style = "margin-top: 150px">
+                        <div class="">
+                          <strong>Number of People joined</strong>
+                          <div class="">
+                            <strong>40</strong>
+                          </div>
+                        </div>
                          <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="70"
                             aria-valuemin="0" aria-valuemax="100" style="width:70%">
                               <span class="sr-only">70% Complete</span>
                             </div>
                           </div>
-                        <button class = "btn ">Join </button>
+                        <button class = "btn btn-info">Join </button>
                     </div>
                 </div>
             </div>
