--- a/index2.html
+++ b/index2.html
@@ -94,10 +94,11 @@
                     <hr class="star-primary">
                 </div>
             </div>
+
             <div class="events row-fluid">
 <!-- start of event yoga -->
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <img src="img/portfolio/yoga.png" class="img-responsive" alt=""><br>
                         <strong> Yoga! </strong> <div> Fun </div>
                           <div>Monday 6pm - Large Room</div><br>
@@ -112,7 +113,7 @@
 <!-- end of event 1 -->
 <!-- start of event Learn about Investing -->
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <img src="img/portfolio/finance.png" class="img-responsive" alt=""><br>
                         <strong> Learn about Investing </strong> <div> Money </div>
                           <div>April 13th, 4pm - Small Room</div><br>
@@ -142,7 +143,7 @@
 <!-- end of event Workout session -->
 <!-- start of event Damn Good Place for Podcasters Meetup-->
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <img src="img/portfolio/podcast.png" class="img-responsive" alt=""><br>
                         <strong> Damn Good Place for Podcasters Meetup</strong> <div>Tech • Sponsored by Sandbox Suites</div>
                             <div>April 20th, 6:30pm</div><br>
@@ -157,7 +158,7 @@
 <!-- end of event Lunch at Damn Good Place for Podcasters Meetup -->
 <!-- start of event How to save for retirement -->
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <img src="img/portfolio/money.png" class="img-responsive" alt=""><br>
                         <strong> How to save for retirement</strong> <div>Money •  Sponsored by Credit Karma </div>
                         <div>April 20th, 6:30pm  </div>  <br>
@@ -172,7 +173,7 @@
 <!-- end of event Product Team Cruise!! -->
 <!-- start of event Infographics workshop -->
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <img src="img/portfolio/infographic.png" class="img-responsive" alt=""><br>
                         <strong> Infographics workshop</strong> <div> Design • Sponsored by Sandbox Suites</div>
                           <div>May 7th, 9am</div><br>
@@ -187,7 +188,7 @@
 <!-- end of event Infographics workshop-->
 <!-- start of event Brown Bag Lunch - AWS best practices -->
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal7" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <img src="img/portfolio/tea.png" class="img-responsive" alt=""><br>
                         <strong> Bubble tea run?</strong> <div> Food </div>
                           <div>Monday 6pm</div><br>
@@ -202,7 +203,7 @@
 <!-- end of event Brown Bag Lunch - AWS best practices -->
 <!-- start of event Play with an Oculus! -->
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal8" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <img src="img/portfolio/oculus.png" class="img-responsive" alt=""><br>
                         <strong> Play with an Oculus!</strong><div> Fun • Sponsored by Oculus </div>
                             <div>April 15th, 2pm - Big Room</div><br>
@@ -217,7 +218,7 @@
 <!-- end of event Play with an Oculus!-->
 <!-- start of event SBS Happy hour -->
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal9" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <img src="img/portfolio/happy.png" class="img-responsive" alt=""><br />
                         <strong> Yoga! </strong> <div> Fun • Sponsored by Sandbox Suites </div>
                           <div>April 21st, 4pm</div><br>
@@ -232,7 +233,7 @@
 <!-- end of event SBS Happy hour -->
 <!-- start of event SBS Bagel Breakfast -->
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal10" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <img src="img/portfolio/bagel.png" class="img-responsive" alt=""><br />
                         <strong> SBS Bagel Breakfast </strong> <div> Fun </div>
                           <div>Monday 6pm - Large Room</div><br>
@@ -247,7 +248,7 @@
 <!-- end of event SBS Bagel Breakfast -->
 <!-- start of event Artificial Intelligence Meetup -->
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal11" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <img src="img/portfolio/meetup.png" class="img-responsive" alt=""><br />
                         <strong>Artificial Intelligence Meetup</strong> <div>Tech • Sponsored by Sandbox Suites</div>
                           <div>April 21st, 6:30pm</div><br />
@@ -262,7 +263,7 @@
 <!-- end of event Artificial Intelligence Meetup -->
 <!-- start of event Networking Lunch -->
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal12" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <img src="img/portfolio/lunch.png" class="img-responsive" alt=""><br />
                         <strong>Networking Lunch</strong> <div>Food</div>
                           <div>April 11th, 12pm</div><br />
@@ -330,35 +331,23 @@
     </div>
 
     <!-- Portfolio Modals -->
-    <!-- Yoga Modal Page -->
     <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
-<!--             <div class="close-modal" data-dismiss="modal">
+            <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
                     <div class="rl">
                     </div>
                 </div>
-            </div> -->
+            </div>
             <div class="container">
-<<<<<<< Updated upstream
-<!--                     <div class="col-lg-5 col-lg-offset-2"> -->
-            <h2>Yoga</h2>
-            <div class="row">
-                <div class="modal-body col-md-8">
-                      <hr class="star-primary">
-                            <img src="img/portfolio/yoga@2x.png" class="img-responsive img-centered" alt="">
+                <div class="row">
+                    <div class="col-lg-5 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2>Yoga</h2>
+                            <hr class="star-primary">
+                            <img src="img/portfolio/yoga.png" class="img-responsive img-centered" alt="">
                             <h4>Monday, April 19, 2016</h4>
                             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-=======
-
-<!--                     <div class="col-lg-5 col-lg-offset-2"> -->
-                        <h2>Yoga</h2>
-                        <hr class="star-primary">
-            <div class="row">
-                        <div class="modal-body col-md-8">
-                            <img src="img/portfolio/yoga@2x.png" class="img-responsive img-centered" alt="">
-                            <h4>Monday, April 19, 2016</h4>
-                            <p>I'm thinking of going of going to the yoga studio sometime this week. Join me!</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong>Start Bootstrap</a>
@@ -373,33 +362,24 @@
                                     </strong>
                                 </li>
                             </ul>
-
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
-<!--                     </div> -->
-                    <div class="col-md-4" style = "margin-top: 150px">
-                        <div class="">
-                          <strong>Number of People joined</strong>
-                          <div class="">
-                            <strong id = "vote1">40</strong>
-                          </div>
-                        </div>
+                    </div>
+                    <div class="col-lg-5">
                          <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="70"
                             aria-valuemin="0" aria-valuemax="100" style="width:70%">
                               <span class="sr-only">70% Complete</span>
                             </div>
                           </div>
+                        <button class = "btn ">Join </button>
 
-                        <button class = "btn " id ="btn1">Join </button>
 
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
-    <!-- Investing modal page -->
     <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
@@ -409,52 +389,34 @@
                 </div>
             </div>
             <div class="container">
-
-<!--                     <div class="col-lg-5 col-lg-offset-2"> -->
-                        <h2>Learn About Investing</h2>
-                        <hr class="star-primary">
-                        <div class="row">
-                        <div class="modal-body col-md-8">
-
-                            <img src="img/portfolio/finance.png" class="img-responsive img-centered" alt="">
-                            <h4>Monday, April 19, 2016</h4>
-                            <p> Hey everyone, I've been talking with a lot of people about managing their 401ks lately,
-                              so I figured I'd hold an intro workshop on it. We'll talk about why you should maximize
-                              your 401k and how you should manage it.
-                            </p>
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2>Learn about Investing</h2>
+                            <hr class="star-primary">
+                            <img src="img/portfolio/cake.png" class="img-responsive img-centered" alt="">
+                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong>Start Bootstrap</a>
+                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
                                     </strong>
                                 </li>
                                 <li>Date:
-                                    <strong>April 2014</a>
+                                    <strong><a href="http://startbootstrap.com">April 2014</a>
                                     </strong>
                                 </li>
                                 <li>Service:
-                                    <strong>Web Development</a>
+                                    <strong><a href="http://startbootstrap.com">Web Development</a>
                                     </strong>
                                 </li>
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
-<!--                     </div> -->
-                    <div class="col-md-4">
-                         <div class="vote1"> 40 </div>
-                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="70"
-                            aria-valuemin="0" aria-valuemax="100" style="width:70%">
-                              <span class="sr-only">70% Complete</span>
-                            </div>
-                          </div>
-                        <button class = "btn " id="btn2">Join </button>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
-    <!-- Workout modal page -->
     <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
@@ -464,51 +426,34 @@
                 </div>
             </div>
             <div class="container">
-
-<!--                     <div class="col-lg-5 col-lg-offset-2"> -->
-                        <h2>Workout session</h2>
-                        <hr class="star-primary">
-                        <div class="row">
-                        <div class="modal-body col-md-8">
-
-                            <img src="img/portfolio/gym.png" class="img-responsive img-centered" alt="">
-                            <h4>Monday, April 19, 2016</h4>
-                            <p> Hey everyone, I've been talking with a lot of people about managing their 401ks lately,
-                              so I figured I'd hold an intro workshop on it. We'll talk about why you should maximize
-                              your 401k and how you should manage it.
-                            </p>
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2>Workout session</h2>
+                            <hr class="star-primary">
+                            <img src="img/portfolio/circus.png" class="img-responsive img-centered" alt="">
+                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong>Start Bootstrap</a>
+                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
                                     </strong>
                                 </li>
                                 <li>Date:
-                                    <strong>April 2014</a>
+                                    <strong><a href="http://startbootstrap.com">April 2014</a>
                                     </strong>
                                 </li>
                                 <li>Service:
-                                    <strong>Web Development</a>
+                                    <strong><a href="http://startbootstrap.com">Web Development</a>
                                     </strong>
                                 </li>
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
-<!--                     </div> -->
-                    <div class="col-md-4">
-                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="70"
-                            aria-valuemin="0" aria-valuemax="100" style="width:70%">
-                              <span class="sr-only">70% Complete</span>
-                            </div>
-                          </div>
-                        <button class = "btn " id="btn2">Join </button>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
-
     <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
@@ -638,7 +583,6 @@
 
     <!-- Custom Theme JavaScript -->
     <script src="js/freelancer.js"></script>
-    <script src="js/joinevent.js"></script>
 
 </body>
 
