--- a/index.html
+++ b/index.html
@@ -69,28 +69,12 @@
         <!-- /.container-fluid -->
     </nav>
 
-    <!-- Header -->
-    <header>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <img class="img-responsive" src="img/profile.png" alt="">
-                    <div class="intro-text">
-                        <span class="name">Accompany</span>
-                        <hr class="star-light">
-                        <span class="skills">a website where you can find people to ACCOMPANY you to do the thing you wanna do</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </header>
-
 <!-- Portfolio Grid Section -->
     <section id="portfolio">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Popular Events</h2>
+                    <h2>Trending Events</h2>
                     <hr class="star-primary">
                 </div>
             </div>
@@ -340,16 +324,6 @@
                 </div>
             </div> -->
             <div class="container">
-<<<<<<< Updated upstream
-<!--                     <div class="col-lg-5 col-lg-offset-2"> -->
-            <h2>Yoga</h2>
-            <div class="row">
-                <div class="modal-body col-md-8">
-                      <hr class="star-primary">
-                            <img src="img/portfolio/yoga@2x.png" class="img-responsive img-centered" alt="">
-                            <h4>Monday, April 19, 2016</h4>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-=======
 
 <!--                     <div class="col-lg-5 col-lg-offset-2"> -->
                         <h2>Yoga</h2>
@@ -377,7 +351,7 @@
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
 <!--                     </div> -->
-                    <div class="col-md-4" style = "margin-top: 150px">
+                    <div class="col-md-4" style = "margin-top: 20px">
                         <div class="">
                           <strong>Number of People joined</strong>
                           <div class="">
