Added creator profile pic

--- a/index.html
+++ b/index.html
@@ -333,7 +333,8 @@
                         <div class="modal-body col-md-8">
                             <img src="img/portfolio/yoga@2x.png" class="img-responsive img-centered" alt="">
                             <h4>Monday, April 19, 2016</h4>
-                            <p>I'm thinking of going of going to the yoga studio sometime this week. Join me!</p>
+                            <p>Hey guys! I'd like to hire a yoga instructor to come in for
+                              a morning workout. Who's in? </p>
 
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
@@ -355,6 +356,11 @@
                         <button class = "btn " id ="btn1">Join </button>
                         <br />
                         <br />
+                        <br />
+                        <strong style = "margin-top: 20px"> Creator </strong>
+                        <br />
+                        <br />
+                        <img class="profile" src='img/portfolio/profile_7.png'> Hanna Xu
                         <br />
                         <strong style = "margin-top: 20px"> Attending </strong>
                         <br />
